<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    tools:context=".view.NovoPedidoActivity"
    xmlns:tools="http://schemas.android.com/tools">

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/tv_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tv_pedido" />

    <EditText
        android:id="@+id/et_pedido"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/et_pedido" />

    <TextView
        android:id="@+id/tv_endereco"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginBottom="5dp"
        android:text="@string/tv_endereco" />

    <EditText
        android:id="@+id/et_endereco"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="left"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/et_endereco" />

    <include layout="activity_mapa"/>

    <Button
        android:id="@+id/bt_pronto"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="right"
        android:onClick="botaoPronto"
        android:text="@string/bt_pronto" />

</LinearLayout>